methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:32: error: ':' expected but ')' found.
def isFacingTrail(couleur):Boolean = {
                         ^SlugSnail:48: error: identifier expected but '}' found.
}
^